Inline Text properties for better SVG scraping

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>Congressional District Map</title>
+    <title>Location Matters 2021</title>
     <meta
       name="description"
       content="Improving Lives Through Smart Tax Policy"
@@ -2405,8 +2405,8 @@
       <article class="padded padded--extreme width-constrained">
         <div id="research">
           <div class="content__header research__header">
-            <div content="2020-12-22" class="date">December 22, 2020</div>
-            <h1 id="post-title">Congressional District Map</h1>
+            <div content="2020-12-22" class="date">April 22, 2021</div>
+            <h1 id="post-title">Location Matters 2021</h1>
             <noscript>You need to enable JavaScript to run this app.</noscript>
             <div id="root"></div>
           </div>
